haribs haywhy webpage

--- a/Haribs Haywhy.html
+++ b/Haribs Haywhy.html
@@ -36,7 +36,8 @@ footer{
                 <p>Echoflux, Echoflux, an astral Vibe </p>
                 <p>In this secret space, our dreams thrive</p>
                 <p>Music:</p>
-                <p>A cosmic indie-electronic sound with a blend of ambient textures, pulsing beats, and an otherworldy melody.<br></b></p>
+                <p>A cosmic indie-electronic sound with a blend of ambient textures, pulsing beats, and an otherworldy melody.<br><br>
+                    <marquee direction="down"><img src="background.jpg"></marquee></b></p>
             <a href="media.php"><img src="Media.jpg" width="196" height="67" border="0" /></a><br><br>
             <form>
                 <field-set>
@@ -90,5 +91,6 @@ footer{
         <marquee direction="down"><img src="IMG-20240810-WA0010.jpg" /></marquee>
         <footer><marquee direction="left"> Glad to have you here</marquee></footer>
         <marquee direction="up"><img src="IMG-20240810-WA0010.jpg" /></marquee>
+    
     </body>
-</html>
+</html> 
